fixed slide-ins width on mobile view

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -490,8 +490,8 @@ body {
 
 @media screen and (max-width:376px) {
     .my-jobs{
-        min-width: 300px;
-        max-width: 300px;
+        min-width: 350px;
+        max-width: 350px;
     }
 }
 
